--- a/scss/main.scss
+++ b/scss/main.scss
@@ -7,3 +7,4 @@
 @import './06localStyles/localStyles';
 @import './07animations/animations';
 @import './08media/media';
+@import '../templates/UIComponents/uiComponents'
