--- a/templates/UIComponents/button/_button.scss
+++ b/templates/UIComponents/button/_button.scss
@@ -1,17 +1,18 @@
-button{
+.btn{
     padding: .5em 1.5em .5em 1.5em;
     border: none;
     border-radius: 5px;
-    font-size: $f3;
-    color: $primaryCol;
     transition: $transitionDuration;
+
     :hover{
         color: $primaryColMuted;
     }
+
     :active{
         color: white;
         background-color: $primaryCol;
     }
+
     :focus{
         color: $primaryColMuted;
         background-color: $primaryCol;
