--- a/scss/04compounds/_compounds.scss
+++ b/scss/04compounds/_compounds.scss
@@ -1,7 +1,11 @@
-@import 'nav';
-@import 'logo';
-@import 'card';
+@import 'button';
+@import 'cards';
+@import 'forms';
+@import 'menus';
+@import 'otherNavs';
+@import 'selectors';
+@import 'shorthandMenus';
+@import 'accordion';
 @import 'list';
-@import 'form';
-@import 'socialMediaLinks';
-@import 'aside';
+@import 'carousel';
+@import 'modal';
