--- a/scss/04compounds/card/_employeecard.scss
+++ b/scss/04compounds/card/_employeecard.scss
@@ -16,6 +16,8 @@
         font-weight: 700;
         color: $primaryCol;
         text-align: center;
+        color: red;
+        background-color: red;
     }
 
     &__position{
