--- a/scss/02atoms/_atoms.scss
+++ b/scss/02atoms/_atoms.scss
@@ -1,3 +1,7 @@
 @import 'typography';
 @import 'images';
 @import 'borders';
+@import 'background';
+@import 'icons';
+@import 'logo';
+@import 'socialMediaLinks';
