--- a/scss/02atoms/_borders.scss
+++ b/scss/02atoms/_borders.scss
@@ -1,5 +1,7 @@
-$borderThin: .5px, solid $primaryColorMuted;
-$borderMed: 3px, solid $primaryColorMuted;
-$borderThick: 5px, solid $primaryColorMuted;
+@import '../01subAtoms/colors';
+
+$borderThin: .5px solid $primaryColMuted;
+$borderMed: 3px solid $primaryColMuted;
+$borderThick: 5px solid $primaryColMuted;
 
 $borderRadius: 10px;
