--- a/scss/04compounds/shorthandMenu/_shorthandMenus.scss
+++ b/scss/04compounds/shorthandMenu/_shorthandMenus.scss
@@ -1,5 +1,7 @@
-@import 'altBurger';
-@import 'bentoBurger';
+/* @import 'altBurger';
+@import 'burger';
 @import 'döner';
-@import 'hamburger';
+*/
 @import 'kebab';
+@import 'meatball';
+@import 'bento';
