--- a/scss/04compounds/shorthandMenu/_bento.scss
+++ b/scss/04compounds/shorthandMenu/_bento.scss
@@ -3,16 +3,18 @@ body{
     display: grid;
     place-items: center;
 }
-.kebab{
+.bento{
     &__container{
-        /* background-color: red; */
         width: fit-content;
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        grid-template-rows: repeat(3, 1fr);
     }
 
     &__square{
         height: 10px;
         width: 10px;
         background-color: $black;
-        margin: 5px 0;
+        margin: 5px 5px;
     }
 }
