--- a/scss/04compounds/shorthandMenu/_burger.scss
+++ b/scss/04compounds/shorthandMenu/_burger.scss
@@ -3,15 +3,15 @@ body{
     display: grid;
     place-items: center;
 }
-.kebab{
+.burger{
     &__container{
         /* background-color: red; */
         width: fit-content;
     }
 
-    &__square{
-        height: 10px;
-        width: 10px;
+    &__line{
+        height: 5px;
+        width: 40px;
         background-color: $black;
         margin: 5px 0;
     }
