--- a/css/main.css
+++ b/css/main.css
@@ -918,6 +918,78 @@ ul li {
   margin: .5em 0;
 }
 
+body {
+  background-color: #2d2d2d;
+  display: grid;
+  place-items: center;
+}
+
+.modal-offer__container {
+  width: 25vh;
+  background-color: white;
+  padding: 0;
+  margin: 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.modal-offer__img {
+  width: 100%;
+  height: 50%;
+  object-fit: cover;
+}
+
+.modal-offer__txt-container {
+  padding: 0 15px;
+}
+
+.modal-offer__title {
+  color: #95bf40;
+  font-size: 2.84444rem;
+  margin: 1em 0;
+}
+
+.modal-offer__list-item {
+  color: #4f3a78;
+  font-size: 1.6rem;
+}
+
+.modal-offer__list-item::before {
+  font-family: "Font Awesome 5 Free";
+  font-weight: 900;
+  content: "\f069";
+  margin-right: .5em;
+  font-size: 1.2rem;
+}
+
+.modal-offer__btn {
+  padding: .5em 1.5em .5em 1.5em;
+  border: none;
+  border-radius: 5px;
+  transition: 300ms;
+  color: #95bf40;
+  font-size: 2.13333rem;
+  margin: .5em auto 1.5em;
+  display: block;
+}
+
+.modal-offer__btn :hover {
+  color: #8eac53;
+}
+
+.modal-offer__btn :active {
+  color: white;
+  background-color: #95bf40;
+}
+
+.modal-offer__btn :focus {
+  color: #8eac53;
+  background-color: #95bf40;
+}
+
 :root {
   font-size: 10px;
 }
