--- a/scss/04compounds/menus/_nav-bar.scss
+++ b/scss/04compounds/menus/_nav-bar.scss
@@ -1,19 +1,15 @@
-.dropdown{
+.nav-bar{
     &__container{
         display: flex;
-        flex-direction: column;
-        align-items: center;
         justify-content: space-between;
         align-items: center;
         background-color: $white;
         border-radius: 10px;
-        overflow: hidden;
+        padding: .5em 1em;
     }
-
     &__link{
-        padding: 1em 0 1em 3em;
-        width: 100%;
-        transition: 150ms;
+        margin: 0 1em;
+        width: fit-content;
         
         &:hover{
             color: $white;
