--- a/scss/05globalStyles/_mainL.scss
+++ b/scss/05globalStyles/_mainL.scss
@@ -1,3 +1,11 @@
 main{
     padding: 5vh 0;
 }
+
+body{
+    background-color: tomato;
+    display: grid;
+    place-items: center;
+    height: 100vh;
+    width: 100vw;
+}
