--- a/scss/02atoms/_typography.scss
+++ b/scss/02atoms/_typography.scss
@@ -29,14 +29,10 @@ h3{
     margin-bottom: .5em;
 }
 
-p, textarea, figcaption, label, input, textarea, li{
+p, textarea, figcaption, label, textarea, li{
     color: $primaryCol;
     font-size: $f3;
     margin-bottom: .5em;
-}
-
-input{
-    outline: 1px solid $primaryCol;
 }
 
 a, textarea, figcaption{
